Fixed #1190 - Alignment problem on Growl message without details

--- a/src/components/growl/Growl.css
+++ b/src/components/growl/Growl.css
@@ -34,8 +34,10 @@
 
 .p-growl-item {
 	position: relative;
-	display: block;
-	padding: .5em 1em;
+    padding: .5em 1em;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
 
 .p-growl-item p {
@@ -52,22 +54,20 @@
 
 .p-growl-title {
 	font-weight: bold;
-	padding: 0 0 .5em 0;
 	display: block;
 }
 
+.p-growl-details {
+    margin-top: .5em;
+}
+
 .p-growl-image {
-    position: absolute;
-    display: inline-block;
-    left: .5em;
-    top: .25em;
-    padding: 0;
 	font-size: 2em;
 }
 
 .p-growl-message {
-	padding: 0 0 .25em 0;
-    margin-left: 2.5em;
+    margin-left: 1em;
+    align-self: center;
 }
 
 .p-growl-message p {
